# realtime-chat-rust

./: Dockerfile  LICENSE  Makefile  README.md  backend.Dockerfile  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  frontend.Dockerfile  kubernetes.yml
backend/: Cargo.toml
backend/src/: configuration.rs  lib.rs  main.rs  rest_server.rs  ws_server.rs
backend/tests/: health_check.rs  messaging.rs
config/: base.yaml  local.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.ts  main.tsx  payload.ts  style.css
