[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
config = "0.15.8"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.6.0"
serde_json = "1.0.138"
tokio = { version = "1.43.0", default-features = false, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-tungstenite = "0.26.1"

[dev-dependencies]
once_cell = "1.20.3"
reqwest = "0.12.12"
